--- a/build-3004-Project-Desktop-Debug/Makefile
+++ b/build-3004-Project-Desktop-Debug/Makefile
@@ -52,11 +52,19 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../3004-Project/main.cpp \
-		../3004-Project/mainwindow.cpp moc_mainwindow.cpp
-OBJECTS       = main.o \
+SOURCES       = ../3004-Project/device.cpp \
+		../3004-Project/main.cpp \
+		../3004-Project/mainwindow.cpp \
+		../3004-Project/session.cpp moc_device.cpp \
+		moc_mainwindow.cpp \
+		moc_session.cpp
+OBJECTS       = device.o \
+		main.o \
 		mainwindow.o \
-		moc_mainwindow.o
+		session.o \
+		moc_device.o \
+		moc_mainwindow.o \
+		moc_session.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
@@ -113,6 +121,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf \
+		../3004-Project/.qmake.stash \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf \
@@ -132,8 +141,12 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exceptions.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
-		../3004-Project/3004-Project.pro ../3004-Project/mainwindow.h ../3004-Project/main.cpp \
-		../3004-Project/mainwindow.cpp
+		../3004-Project/3004-Project.pro ../3004-Project/device.h \
+		../3004-Project/mainwindow.h \
+		../3004-Project/session.h ../3004-Project/device.cpp \
+		../3004-Project/main.cpp \
+		../3004-Project/mainwindow.cpp \
+		../3004-Project/session.cpp
 QMAKE_TARGET  = 3004-Project
 DESTDIR       = 
 TARGET        = 3004-Project
@@ -201,6 +214,7 @@ Makefile: ../3004-Project/3004-Project.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf \
@@ -278,6 +292,7 @@ Makefile: ../3004-Project/3004-Project.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf:
+.qmake.stash:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf:
@@ -313,8 +328,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../3004-Project/mainwindow.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../3004-Project/main.cpp ../3004-Project/mainwindow.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../3004-Project/device.h ../3004-Project/mainwindow.h ../3004-Project/session.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../3004-Project/device.cpp ../3004-Project/main.cpp ../3004-Project/mainwindow.cpp ../3004-Project/session.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../3004-Project/mainwindow.ui $(DISTDIR)/
 
 
@@ -347,13 +362,26 @@ compiler_moc_predefs_clean:
 moc_predefs.h: /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -std=gnu++11 -Wall -W -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all: moc_mainwindow.cpp
+compiler_moc_header_make_all: moc_device.cpp moc_mainwindow.cpp moc_session.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp
+	-$(DEL_FILE) moc_device.cpp moc_mainwindow.cpp moc_session.cpp
+moc_device.cpp: ../3004-Project/device.h \
+		../3004-Project/session.h \
+		moc_predefs.h \
+		/usr/lib/qt5/bin/moc
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/student/Documents/GitHub/3004-Project/build-3004-Project-Desktop-Debug/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/student/Documents/GitHub/3004-Project/3004-Project -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/9 -I/usr/include/x86_64-linux-gnu/c++/9 -I/usr/include/c++/9/backward -I/usr/lib/gcc/x86_64-linux-gnu/9/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../3004-Project/device.h -o moc_device.cpp
+
 moc_mainwindow.cpp: ../3004-Project/mainwindow.h \
+		../3004-Project/device.h \
+		../3004-Project/session.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
 	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/student/Documents/GitHub/3004-Project/build-3004-Project-Desktop-Debug/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/student/Documents/GitHub/3004-Project/3004-Project -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/9 -I/usr/include/x86_64-linux-gnu/c++/9 -I/usr/include/c++/9/backward -I/usr/lib/gcc/x86_64-linux-gnu/9/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../3004-Project/mainwindow.h -o moc_mainwindow.cpp
+
+moc_session.cpp: ../3004-Project/session.h \
+		moc_predefs.h \
+		/usr/lib/qt5/bin/moc
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/student/Documents/GitHub/3004-Project/build-3004-Project-Desktop-Debug/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/student/Documents/GitHub/3004-Project/3004-Project -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/9 -I/usr/include/x86_64-linux-gnu/c++/9 -I/usr/include/c++/9/backward -I/usr/lib/gcc/x86_64-linux-gnu/9/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../3004-Project/session.h -o moc_session.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
@@ -376,15 +404,32 @@ compiler_clean: compiler_moc_predefs_clean compiler_moc_header_clean compiler_ui
 
 ####### Compile
 
-main.o: ../3004-Project/main.cpp ../3004-Project/mainwindow.h
+device.o: ../3004-Project/device.cpp ../3004-Project/device.h \
+		../3004-Project/session.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o device.o ../3004-Project/device.cpp
+
+main.o: ../3004-Project/main.cpp ../3004-Project/mainwindow.h \
+		../3004-Project/device.h \
+		../3004-Project/session.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../3004-Project/main.cpp
 
 mainwindow.o: ../3004-Project/mainwindow.cpp ../3004-Project/mainwindow.h \
+		../3004-Project/device.h \
+		../3004-Project/session.h \
 		ui_mainwindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../3004-Project/mainwindow.cpp
 
+session.o: ../3004-Project/session.cpp ../3004-Project/session.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o session.o ../3004-Project/session.cpp
+
+moc_device.o: moc_device.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_device.o moc_device.cpp
+
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
+
+moc_session.o: moc_session.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_session.o moc_session.cpp
 
 ####### Install
 
