--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 
 *.o
 *.o
+build-3004-Project-Desktop-Debug/.qmake.stash
+build-3004-Project-Desktop-Debug/3004-Project
+build-3004-Project-Desktop-Debug/Makefile
+build-3004-Project-Desktop-Debug/moc_device.cpp
+build-3004-Project-Desktop-Debug/moc_mainwindow.cpp
+build-3004-Project-Desktop-Debug/moc_predefs.h
+build-3004-Project-Desktop-Debug/moc_session.cpp
+build-3004-Project-Desktop-Debug/ui_mainwindow.h
