LongTermStorage v0.8 (Working Session Records)
Saving/Loading from records.json working for the most part.

Updates to other classes' functions to accommodate new class

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ build-3004-Project-Desktop-Debug/moc_mainwindow.cpp
 build-3004-Project-Desktop-Debug/moc_predefs.h
 build-3004-Project-Desktop-Debug/moc_session.cpp
 build-3004-Project-Desktop-Debug/ui_mainwindow.h
+build-3004-Project-Desktop-Debug/moc_longTermStorage.cpp
